[gd_scene load_steps=8 format=3 uid="uid://bqcc5tf3fb77d"]

[ext_resource type="PackedScene" uid="uid://bmyq5ia63qcgf" path="res://RealLevels/level_1.tscn" id="1_p8xch"]
[ext_resource type="Script" path="res://Scripts/Level1/realLevel1.gd" id="2_vj14l"]
[ext_resource type="PackedScene" uid="uid://dw3iply7mf6xy" path="res://GameObjects/Blocks/MOE_grass_tiles1.tscn" id="3_js2cs"]
[ext_resource type="PackedScene" uid="uid://dsw873s4fmvk8" path="res://GameObjects/backgrounds/1_pbg.tscn" id="3_mb4d0"]
[ext_resource type="PackedScene" uid="uid://pjb4qvixwt3q" path="res://GameObjects/Blocks/Sekiro/PoleSingle.tscn" id="3_pcooe"]
[ext_resource type="PackedScene" uid="uid://dqxcaeu85v1ul" path="res://GameObjects/backgrounds/sekiro_bg2.tscn" id="4_wy50d"]
[ext_resource type="PackedScene" uid="uid://bc8x3un1onoqf" path="res://GameObjects/Util/Checkpoint.tscn" id="5_plt0h"]

[node name="Level1" instance=ExtResource("1_p8xch")]
script = ExtResource("2_vj14l")

[node name="PlayerNode" parent="." index="0"]
position = Vector2(-1627, 562)

[node name="center" parent="PlayerNode" index="1"]
scale = Vector2(0.999997, 0.999997)

[node name="PointLight2D" parent="PlayerNode/center/Camera2D" index="1"]
energy = 0.8
texture_scale = 0.8

[node name="ParticleController" parent="PlayerNode" index="2"]
col = Color(0.94902, 0.819608, 0.682353, 1)

[node name="TileMap" parent="Map" index="0" instance=ExtResource("3_js2cs")]
layer_0/tile_data = PackedInt32Array(720860, 0, 0, 786396, 0, 1, 851932, 0, 2, 917468, 0, 3, 983004, 0, 4, 1048540, 0, 5, 1114076, 0, 6, 720861, 65536, 0, 786397, 65536, 1, 851933, 65536, 2, 917469, 65536, 3, 983005, 65536, 4, 1048541, 65536, 5, 1114077, 65536, 6, 720862, 131072, 0, 786398, 131072, 1, 851934, 131072, 2, 917470, 131072, 3, 983006, 131072, 4, 1048542, 131072, 5, 1114078, 131072, 6, 720863, 196608, 0, 786399, 196608, 1, 851935, 196608, 2, 917471, 196608, 3, 983007, 196608, 4, 1048543, 196608, 5, 1114079, 196608, 6, 720864, 131072, 0, 786400, 131072, 1, 851936, 131072, 2, 917472, 131072, 3, 983008, 131072, 4, 1048544, 131072, 5, 1114080, 131072, 6, 720865, 196608, 0, 786401, 196608, 1, 851937, 196608, 2, 917473, 196608, 3, 983009, 196608, 4, 1048545, 196608, 5, 1114081, 196608, 6, 720866, 131072, 0, 786402, 131072, 1, 851938, 131072, 2, 917474, 131072, 3, 983010, 131072, 4, 1048546, 131072, 5, 1114082, 131072, 6, 720867, 196608, 0, 786403, 196608, 1, 851939, 196608, 2, 917475, 196608, 3, 983011, 196608, 4, 1048547, 196608, 5, 1114083, 196608, 6, 720868, 131072, 0, 786404, 131072, 1, 851940, 131072, 2, 917476, 131072, 3, 983012, 131072, 4, 1048548, 131072, 5, 1114084, 131072, 6, 720869, 196608, 0, 786405, 196608, 1, 851941, 196608, 2, 917477, 196608, 3, 983013, 196608, 4, 1048549, 196608, 5, 1114085, 196608, 6, 720870, 131072, 0, 786406, 131072, 1, 851942, 131072, 2, 917478, 131072, 3, 983014, 131072, 4, 1048550, 131072, 5, 1114086, 131072, 6, 720871, 196608, 0, 786407, 196608, 1, 851943, 196608, 2, 917479, 196608, 3, 983015, 196608, 4, 1048551, 196608, 5, 1114087, 196608, 6, 720872, 131072, 0, 786408, 131072, 1, 851944, 131072, 2, 917480, 131072, 3, 983016, 131072, 4, 1048552, 131072, 5, 1114088, 131072, 6, 720873, 196608, 0, 786409, 196608, 1, 851945, 196608, 2, 917481, 196608, 3, 983017, 196608, 4, 1048553, 196608, 5, 1114089, 196608, 6, 720874, 131072, 0, 786410, 131072, 1, 851946, 131072, 2, 917482, 131072, 3, 983018, 131072, 4, 1048554, 131072, 5, 1114090, 131072, 6, 720875, 196608, 0, 786411, 196608, 1, 851947, 196608, 2, 917483, 196608, 3, 983019, 196608, 4, 1048555, 196608, 5, 1114091, 196608, 6, 720876, 131072, 0, 786412, 131072, 1, 851948, 131072, 2, 917484, 131072, 3, 983020, 131072, 4, 1048556, 131072, 5, 1114092, 131072, 6, 720877, 196608, 0, 786413, 196608, 1, 851949, 196608, 2, 917485, 196608, 3, 983021, 196608, 4, 1048557, 196608, 5, 1114093, 196608, 6, 720878, 131072, 0, 786414, 131072, 1, 851950, 131072, 2, 917486, 131072, 3, 983022, 131072, 4, 1048558, 131072, 5, 1114094, 131072, 6, 720879, 196608, 0, 786415, 196608, 1, 851951, 196608, 2, 917487, 196608, 3, 983023, 196608, 4, 1048559, 196608, 5, 1114095, 196608, 6, 720880, 131072, 0, 786416, 131072, 1, 851952, 131072, 2, 917488, 131072, 3, 983024, 131072, 4, 1048560, 131072, 5, 1114096, 131072, 6, 720881, 196608, 0, 786417, 196608, 1, 851953, 196608, 2, 917489, 196608, 3, 983025, 196608, 4, 1048561, 196608, 5, 1114097, 196608, 6, 720882, 131072, 0, 786418, 131072, 1, 851954, 131072, 2, 917490, 131072, 3, 983026, 131072, 4, 1048562, 131072, 5, 1114098, 131072, 6, 720883, 196608, 0, 786419, 196608, 1, 851955, 196608, 2, 917491, 196608, 3, 983027, 196608, 4, 1048563, 196608, 5, 1114099, 196608, 6, 720884, 131072, 0, 786420, 131072, 1, 851956, 131072, 2, 917492, 131072, 3, 983028, 131072, 4, 1048564, 131072, 5, 1114100, 131072, 6, 720885, 196608, 0, 786421, 196608, 1, 851957, 196608, 2, 917493, 196608, 3, 983029, 196608, 4, 1048565, 196608, 5, 1114101, 196608, 6, 720886, 131072, 0, 786422, 131072, 1, 851958, 131072, 2, 917494, 131072, 3, 983030, 131072, 4, 1048566, 131072, 5, 1114102, 131072, 6, 720887, 196608, 0, 786423, 196608, 1, 851959, 196608, 2, 917495, 196608, 3, 983031, 196608, 4, 1048567, 196608, 5, 1114103, 196608, 6, 720888, 131072, 0, 786424, 131072, 1, 851960, 131072, 2, 917496, 131072, 3, 983032, 131072, 4, 1048568, 131072, 5, 1114104, 131072, 6, 720889, 196608, 0, 786425, 196608, 1, 851961, 196608, 2, 917497, 196608, 3, 983033, 196608, 4, 1048569, 196608, 5, 1114105, 196608, 6, 720890, 131072, 0, 786426, 131072, 1, 851962, 131072, 2, 917498, 131072, 3, 983034, 131072, 4, 1048570, 131072, 5, 1114106, 131072, 6, 720891, 196608, 0, 786427, 196608, 1, 851963, 196608, 2, 917499, 196608, 3, 983035, 196608, 4, 1048571, 196608, 5, 1114107, 196608, 6, 720892, 131072, 0, 786428, 131072, 1, 851964, 131072, 2, 917500, 131072, 3, 983036, 131072, 4, 1048572, 131072, 5, 1114108, 131072, 6, 720893, 196608, 0, 786429, 196608, 1, 851965, 196608, 2, 917501, 196608, 3, 983037, 196608, 4, 1048573, 196608, 5, 1114109, 196608, 6, 720894, 131072, 0, 786430, 131072, 1, 851966, 131072, 2, 917502, 131072, 3, 983038, 131072, 4, 1048574, 131072, 5, 1114110, 131072, 6, 720895, 196608, 0, 786431, 196608, 1, 851967, 196608, 2, 917503, 196608, 3, 983039, 196608, 4, 1048575, 196608, 5, 1114111, 196608, 6, 655360, 131072, 0, 720896, 131072, 1, 786432, 131072, 2, 851968, 131072, 3, 917504, 131072, 4, 983040, 131072, 5, 1048576, 131072, 6, 655361, 196608, 0, 720897, 196608, 1, 786433, 196608, 2, 851969, 196608, 3, 917505, 196608, 4, 983041, 196608, 5, 1048577, 196608, 6, 655362, 131072, 0, 720898, 131072, 1, 786434, 131072, 2, 851970, 131072, 3, 917506, 131072, 4, 983042, 131072, 5, 1048578, 131072, 6, 655363, 196608, 0, 720899, 196608, 1, 786435, 196608, 2, 851971, 196608, 3, 917507, 196608, 4, 983043, 196608, 5, 1048579, 196608, 6, 655364, 131072, 0, 720900, 131072, 1, 786436, 131072, 2, 851972, 131072, 3, 917508, 131072, 4, 983044, 131072, 5, 1048580, 131072, 6, 655365, 196608, 0, 720901, 196608, 1, 786437, 196608, 2, 851973, 196608, 3, 917509, 196608, 4, 983045, 196608, 5, 1048581, 196608, 6, 655366, 131072, 0, 720902, 131072, 1, 786438, 131072, 2, 851974, 131072, 3, 917510, 131072, 4, 983046, 131072, 5, 1048582, 131072, 6, 655367, 196608, 0, 720903, 196608, 1, 786439, 196608, 2, 851975, 196608, 3, 917511, 196608, 4, 983047, 196608, 5, 1048583, 196608, 6, 655368, 131072, 0, 720904, 131072, 1, 786440, 131072, 2, 851976, 131072, 3, 917512, 131072, 4, 983048, 131072, 5, 1048584, 131072, 6, 655369, 196608, 0, 720905, 196608, 1, 786441, 196608, 2, 851977, 196608, 3, 917513, 196608, 4, 983049, 196608, 5, 1048585, 196608, 6, 655370, 131072, 0, 720906, 131072, 1, 786442, 131072, 2, 851978, 131072, 3, 917514, 131072, 4, 983050, 131072, 5, 1048586, 131072, 6, 655371, 196608, 0, 720907, 196608, 1, 786443, 196608, 2, 851979, 196608, 3, 917515, 196608, 4, 983051, 196608, 5, 1048587, 196608, 6, 655372, 131072, 0, 720908, 131072, 1, 786444, 131072, 2, 851980, 131072, 3, 917516, 131072, 4, 983052, 131072, 5, 1048588, 131072, 6, 655373, 196608, 0, 720909, 196608, 1, 786445, 196608, 2, 851981, 196608, 3, 917517, 196608, 4, 983053, 196608, 5, 1048589, 196608, 6, 655374, 131072, 0, 720910, 131072, 1, 786446, 131072, 2, 851982, 131072, 3, 917518, 131072, 4, 983054, 131072, 5, 1048590, 131072, 6, 655375, 196608, 0, 720911, 196608, 1, 786447, 196608, 2, 851983, 196608, 3, 917519, 196608, 4, 983055, 196608, 5, 1048591, 196608, 6, 655376, 131072, 0, 720912, 131072, 1, 786448, 131072, 2, 851984, 131072, 3, 917520, 131072, 4, 983056, 131072, 5, 1048592, 131072, 6, 655377, 196608, 0, 720913, 196608, 1, 786449, 196608, 2, 851985, 196608, 3, 917521, 196608, 4, 983057, 196608, 5, 1048593, 196608, 6, 655378, 131072, 0, 720914, 131072, 1, 786450, 131072, 2, 851986, 131072, 3, 917522, 131072, 4, 983058, 131072, 5, 1048594, 131072, 6, 655379, 196608, 0, 720915, 196608, 1, 786451, 196608, 2, 851987, 196608, 3, 917523, 196608, 4, 983059, 196608, 5, 1048595, 196608, 6, 655380, 131072, 0, 720916, 131072, 1, 786452, 131072, 2, 851988, 131072, 3, 917524, 131072, 4, 983060, 131072, 5, 1048596, 131072, 6, 655381, 196608, 0, 720917, 196608, 1, 786453, 196608, 2, 851989, 196608, 3, 917525, 196608, 4, 983061, 196608, 5, 1048597, 196608, 6, 655382, 131072, 0, 720918, 131072, 1, 786454, 131072, 2, 851990, 131072, 3, 917526, 131072, 4, 983062, 131072, 5, 1048598, 131072, 6, 655383, 196608, 0, 720919, 196608, 1, 786455, 196608, 2, 851991, 196608, 3, 917527, 196608, 4, 983063, 196608, 5, 1048599, 196608, 6, 655384, 131072, 0, 720920, 131072, 1, 786456, 131072, 2, 851992, 131072, 3, 917528, 131072, 4, 983064, 131072, 5, 1048600, 131072, 6, 655385, 196608, 0, 720921, 196608, 1, 786457, 196608, 2, 851993, 196608, 3, 917529, 196608, 4, 983065, 196608, 5, 1048601, 196608, 6, 655386, 131072, 0, 720922, 131072, 1, 786458, 131072, 2, 851994, 131072, 3, 917530, 131072, 4, 983066, 131072, 5, 1048602, 131072, 6, 655387, 196608, 0, 720923, 196608, 1, 786459, 196608, 2, 851995, 196608, 3, 917531, 196608, 4, 983067, 196608, 5, 1048603, 196608, 6, 655388, 131072, 0, 720924, 131072, 1, 786460, 131072, 2, 851996, 131072, 3, 917532, 131072, 4, 983068, 131072, 5, 1048604, 131072, 6, 655389, 196608, 0, 720925, 196608, 1, 786461, 196608, 2, 851997, 196608, 3, 917533, 196608, 4, 983069, 196608, 5, 1048605, 196608, 6, 655390, 131072, 0, 720926, 131072, 1, 786462, 131072, 2, 851998, 131072, 3, 917534, 131072, 4, 983070, 131072, 5, 1048606, 131072, 6, 655391, 196608, 0, 720927, 196608, 1, 786463, 196608, 2, 851999, 196608, 3, 917535, 196608, 4, 983071, 196608, 5, 1048607, 196608, 6, 655392, 131072, 0, 720928, 131072, 1, 786464, 131072, 2, 852000, 131072, 3, 917536, 131072, 4, 983072, 131072, 5, 1048608, 131072, 6, 655393, 196608, 0, 720929, 196608, 1, 786465, 196608, 2, 852001, 196608, 3, 917537, 196608, 4, 983073, 196608, 5, 1048609, 196608, 6, 655394, 131072, 0, 720930, 131072, 1, 786466, 131072, 2, 852002, 131072, 3, 917538, 131072, 4, 983074, 131072, 5, 1048610, 131072, 6, 655395, 196608, 0, 720931, 196608, 1, 786467, 196608, 2, 852003, 196608, 3, 917539, 196608, 4, 983075, 196608, 5, 1048611, 196608, 6, 655396, 131072, 0, 720932, 131072, 1, 786468, 131072, 2, 852004, 131072, 3, 917540, 131072, 4, 983076, 131072, 5, 1048612, 131072, 6, 655397, 196608, 0, 720933, 196608, 1, 786469, 196608, 2, 852005, 196608, 3, 917541, 196608, 4, 983077, 196608, 5, 1048613, 196608, 6, 655398, 131072, 0, 720934, 131072, 1, 786470, 131072, 2, 852006, 131072, 3, 917542, 131072, 4, 983078, 131072, 5, 1048614, 131072, 6, 655399, 196608, 0, 720935, 196608, 1, 786471, 196608, 2, 852007, 196608, 3, 917543, 196608, 4, 983079, 196608, 5, 1048615, 196608, 6, 655400, 131072, 0, 720936, 131072, 1, 786472, 131072, 2, 852008, 131072, 3, 917544, 131072, 4, 983080, 131072, 5, 1048616, 131072, 6, 655401, 196608, 0, 720937, 196608, 1, 786473, 196608, 2, 852009, 196608, 3, 917545, 196608, 4, 983081, 196608, 5, 1048617, 196608, 6, 655402, 131072, 0, 720938, 131072, 1, 786474, 131072, 2, 852010, 131072, 3, 917546, 131072, 4, 983082, 131072, 5, 1048618, 131072, 6, 655403, 196608, 0, 720939, 196608, 1, 786475, 196608, 2, 852011, 196608, 3, 917547, 196608, 4, 983083, 196608, 5, 1048619, 196608, 6, 655404, 131072, 0, 720940, 131072, 1, 786476, 131072, 2, 852012, 131072, 3, 917548, 131072, 4, 983084, 131072, 5, 1048620, 131072, 6, 655405, 196608, 0, 720941, 196608, 1, 786477, 196608, 2, 852013, 196608, 3, 917549, 196608, 4, 983085, 196608, 5, 1048621, 196608, 6, 655406, 131072, 0, 720942, 131072, 1, 786478, 131072, 2, 852014, 131072, 3, 917550, 131072, 4, 983086, 131072, 5, 1048622, 131072, 6, 655407, 196608, 0, 720943, 196608, 1, 786479, 196608, 2, 852015, 196608, 3, 917551, 196608, 4, 983087, 196608, 5, 1048623, 196608, 6, 655408, 131072, 0, 720944, 131072, 1, 786480, 131072, 2, 852016, 131072, 3, 917552, 131072, 4, 983088, 131072, 5, 1048624, 131072, 6, 655409, 196608, 0, 720945, 196608, 1, 786481, 196608, 2, 852017, 196608, 3, 917553, 196608, 4, 983089, 196608, 5, 1048625, 196608, 6, 655410, 131072, 0, 720946, 131072, 1, 786482, 131072, 2, 852018, 131072, 3, 917554, 131072, 4, 983090, 131072, 5, 1048626, 131072, 6, 655411, 196608, 0, 720947, 196608, 1, 786483, 196608, 2, 852019, 196608, 3, 917555, 196608, 4, 983091, 196608, 5, 1048627, 196608, 6, 655412, 131072, 0, 720948, 131072, 1, 786484, 131072, 2, 852020, 131072, 3, 917556, 131072, 4, 983092, 131072, 5, 1048628, 131072, 6, 655413, 196608, 0, 720949, 196608, 1, 786485, 196608, 2, 852021, 196608, 3, 917557, 196608, 4, 983093, 196608, 5, 1048629, 196608, 6, 655414, 131072, 0, 720950, 131072, 1, 786486, 131072, 2, 852022, 131072, 3, 917558, 131072, 4, 983094, 131072, 5, 1048630, 131072, 6, 655415, 196608, 0, 720951, 196608, 1, 786487, 196608, 2, 852023, 196608, 3, 917559, 196608, 4, 983095, 196608, 5, 1048631, 196608, 6, 655416, 131072, 0, 720952, 131072, 1, 786488, 131072, 2, 852024, 131072, 3, 917560, 131072, 4, 983096, 131072, 5, 1048632, 131072, 6, 655417, 196608, 0, 720953, 196608, 1, 786489, 196608, 2, 852025, 196608, 3, 917561, 196608, 4, 983097, 196608, 5, 1048633, 196608, 6, 655418, 131072, 0, 720954, 131072, 1, 786490, 131072, 2, 852026, 131072, 3, 917562, 131072, 4, 983098, 131072, 5, 1048634, 131072, 6, 655419, 196608, 0, 720955, 196608, 1, 786491, 196608, 2, 852027, 196608, 3, 917563, 196608, 4, 983099, 196608, 5, 1048635, 196608, 6, 655420, 131072, 0, 720956, 131072, 1, 786492, 131072, 2, 852028, 131072, 3, 917564, 131072, 4, 983100, 131072, 5, 1048636, 131072, 6, 655421, 196608, 0, 720957, 196608, 1, 786493, 196608, 2, 852029, 196608, 3, 917565, 196608, 4, 983101, 196608, 5, 1048637, 196608, 6, 655422, 131072, 0, 720958, 131072, 1, 786494, 131072, 2, 852030, 131072, 3, 917566, 131072, 4, 983102, 131072, 5, 1048638, 131072, 6, 655423, 196608, 0, 720959, 196608, 1, 786495, 196608, 2, 852031, 196608, 3, 917567, 196608, 4, 983103, 196608, 5, 1048639, 196608, 6, 655424, 131072, 0, 720960, 131072, 1, 786496, 131072, 2, 852032, 131072, 3, 917568, 131072, 4, 983104, 131072, 5, 1048640, 131072, 6, 655425, 196608, 0, 720961, 196608, 1, 786497, 196608, 2, 852033, 196608, 3, 917569, 196608, 4, 983105, 196608, 5, 1048641, 196608, 6, 655426, 131072, 0, 720962, 131072, 1, 786498, 131072, 2, 852034, 131072, 3, 917570, 131072, 4, 983106, 131072, 5, 1048642, 131072, 6, 655427, 196608, 0, 720963, 196608, 1, 786499, 196608, 2, 852035, 196608, 3, 917571, 196608, 4, 983107, 196608, 5, 1048643, 196608, 6, 655428, 262144, 0, 720964, 262144, 1, 786500, 262144, 2, 852036, 262144, 3, 917572, 262144, 4, 983108, 262144, 5, 1048644, 262144, 6, 655429, 327680, 0, 720965, 327680, 1, 786501, 327680, 2, 852037, 327680, 3, 917573, 327680, 4, 983109, 327680, 5, 1048645, 327680, 6, -131061, 0, 0, -65525, 0, 1, -131060, 65536, 0, -65524, 65536, 1, -131059, 131072, 0, -65523, 131072, 1, -131058, 196608, 0, -65522, 196608, 1, -131057, 262144, 0, -65521, 262144, 1, -131056, 327680, 0, -65520, 327680, 1, -458729, 0, 0, -393193, 0, 1, -327657, 0, 2, -262121, 0, 3, -196585, 0, 4, -131049, 0, 5, -65513, 0, 6, -458728, 65536, 0, -393192, 65536, 1, -327656, 65536, 2, -262120, 65536, 3, -196584, 65536, 4, -131048, 65536, 5, -65512, 65536, 6, -458727, 131072, 0, -393191, 131072, 1, -327655, 131072, 2, -262119, 131072, 3, -196583, 131072, 4, -131047, 131072, 5, -65511, 131072, 6, -458726, 196608, 0, -393190, 196608, 1, -327654, 196608, 2, -262118, 196608, 3, -196582, 196608, 4, -131046, 196608, 5, -65510, 196608, 6, -458725, 262144, 0, -393189, 262144, 1, -327653, 262144, 2, -262117, 262144, 3, -196581, 262144, 4, -131045, 262144, 5, -65509, 262144, 6, -458724, 327680, 0, -393188, 327680, 1, -327652, 327680, 2, -262116, 327680, 3, -196580, 327680, 4, -131044, 327680, 5, -65508, 327680, 6, -458721, 0, 0, -393185, 0, 1, -327649, 0, 2, -262113, 0, 3, -196577, 0, 4, -131041, 0, 5, -65505, 0, 6, -458720, 65536, 0, -393184, 65536, 1, -327648, 65536, 2, -262112, 65536, 3, -196576, 65536, 4, -131040, 65536, 5, -65504, 65536, 6, -458719, 131072, 0, -393183, 131072, 1, -327647, 131072, 2, -262111, 131072, 3, -196575, 131072, 4, -131039, 131072, 5, -65503, 131072, 6, -458718, 196608, 0, -393182, 196608, 1, -327646, 196608, 2, -262110, 196608, 3, -196574, 196608, 4, -131038, 196608, 5, -65502, 196608, 6, -458717, 262144, 0, -393181, 262144, 1, -327645, 262144, 2, -262109, 262144, 3, -196573, 262144, 4, -131037, 262144, 5, -65501, 262144, 6, -458716, 327680, 0, -393180, 327680, 1, -327644, 327680, 2, -262108, 327680, 3, -196572, 327680, 4, -131036, 327680, 5, -65500, 327680, 6, 11, 0, 2, 65547, 0, 3, 131083, 0, 4, 12, 65536, 2, 65548, 65536, 3, 131084, 65536, 4, 13, 131072, 2, 65549, 131072, 3, 131085, 131072, 3, 14, 196608, 2, 65550, 196608, 3, 131086, 131072, 3, 15, 262144, 2, 65551, 262144, 3, 131087, 262144, 3, 16, 327680, 2, 65552, 327680, 3, 131088, 327680, 4, 17, 393216, 2, 65553, 393216, 3, 131089, 393216, 4, 196619, 0, 2, 262155, 0, 3, 327691, 0, 4, 196620, 65536, 3, 262156, 65536, 3, 327692, 65536, 4, 196621, 196608, 3, 262157, 131072, 3, 327693, 131072, 4, 196622, 131072, 3, 262158, 196608, 3, 327694, 196608, 4, 196623, 262144, 3, 262159, 262144, 3, 327695, 262144, 4, 196624, 327680, 2, 262160, 327680, 3, 327696, 327680, 4, 196625, 393216, 2, 262161, 393216, 3, 327697, 393216, 4, 393227, 0, 5, 458763, 0, 6, 393228, 65536, 5, 458764, 65536, 6, 393229, 131072, 5, 458765, 131072, 6, 393230, 196608, 5, 458766, 196608, 6, 393231, 262144, 5, 458767, 262144, 6, 393232, 327680, 5, 458768, 327680, 6, 327660, 0, 2, 393196, 0, 3, 458732, 0, 4, 327661, 65536, 2, 393197, 65536, 3, 458733, 65536, 4, 327662, 131072, 3, 393198, 131072, 3, 458734, 131072, 4, 327663, 131072, 3, 393199, 196608, 3, 458735, 196608, 4, 327664, 262144, 2, 393200, 262144, 3, 458736, 262144, 4, 327665, 327680, 2, 393201, 327680, 3, 458737, 327680, 4, 131052, 0, 2, 196588, 0, 3, 262124, 0, 4, 131053, 65536, 2, 196589, 65536, 3, 262125, 65536, 4, 131054, 131072, 3, 196590, 131072, 3, 262126, 131072, 3, 131055, 131072, 3, 196591, 196608, 3, 262127, 131072, 3, 131056, 262144, 2, 196592, 262144, 3, 262128, 262144, 4, 131057, 327680, 2, 196593, 327680, 3, 262129, 327680, 4, -65556, 0, 2, -20, 0, 3, 65516, 0, 4, -65555, 65536, 2, -19, 65536, 3, 65517, 65536, 4, -65554, 131072, 3, -18, 131072, 3, 65518, 131072, 3, -65553, 131072, 3, -17, 196608, 3, 65519, 131072, 3, -65552, 262144, 2, -16, 262144, 3, 65520, 262144, 4, -65551, 327680, 2, -15, 327680, 3, 65521, 327680, 4, -262164, 0, 2, -196628, 0, 3, -131092, 0, 4, -262163, 65536, 2, -196627, 65536, 3, -131091, 65536, 4, -262162, 131072, 2, -196626, 131072, 3, -131090, 131072, 3, -262161, 196608, 2, -196625, 196608, 3, -131089, 131072, 3, -262160, 262144, 2, -196624, 262144, 3, -131088, 262144, 4, -262159, 327680, 2, -196623, 327680, 3, -131087, 327680, 4, -458772, 0, 2, -393236, 0, 3, -327700, 0, 4, -458771, 65536, 2, -393235, 65536, 3, -327699, 65536, 4, -458770, 131072, 2, -393234, 131072, 3, -327698, 131072, 4, -458769, 196608, 2, -393233, 196608, 3, -327697, 196608, 4, -458768, 262144, 2, -393232, 262144, 3, -327696, 262144, 4, -458767, 327680, 2, -393231, 327680, 3, -327695, 327680, 4, 327669, 0, 2, 393205, 0, 3, 458741, 0, 4, 327670, 65536, 2, 393206, 65536, 3, 458742, 65536, 4, 327671, 131072, 3, 393207, 131072, 3, 458743, 131072, 4, 327672, 131072, 3, 393208, 196608, 3, 458744, 196608, 4, 327673, 262144, 2, 393209, 262144, 3, 458745, 262144, 4, 327674, 327680, 2, 393210, 327680, 3, 458746, 327680, 4, 131061, 0, 2, 196597, 0, 3, 262133, 0, 4, 131062, 65536, 2, 196598, 65536, 3, 262134, 65536, 4, 131063, 131072, 3, 196599, 131072, 3, 262135, 131072, 3, 131064, 131072, 3, 196600, 131072, 3, 262136, 131072, 3, 131065, 262144, 2, 196601, 262144, 3, 262137, 262144, 4, 131066, 327680, 2, 196602, 327680, 3, 262138, 327680, 4, -65547, 0, 2, -11, 0, 3, 65525, 0, 4, -65546, 65536, 2, -10, 65536, 3, 65526, 65536, 4, -65545, 131072, 3, -9, 131072, 3, 65527, 131072, 3, -65544, 131072, 3, -8, 131072, 3, 65528, 131072, 3, -65543, 262144, 2, -7, 262144, 3, 65529, 262144, 4, -65542, 327680, 2, -6, 327680, 3, 65530, 327680, 4, -262155, 0, 2, -196619, 0, 3, -131083, 0, 4, -262154, 65536, 2, -196618, 65536, 3, -131082, 65536, 4, -262153, 131072, 3, -196617, 131072, 3, -131081, 131072, 3, -262152, 131072, 3, -196616, 196608, 3, -131080, 131072, 3, -262151, 262144, 2, -196615, 262144, 3, -131079, 262144, 4, -262150, 327680, 2, -196614, 327680, 3, -131078, 327680, 4, -458763, 0, 2, -393227, 0, 3, -327691, 0, 4, -458762, 65536, 2, -393226, 65536, 3, -327690, 65536, 4, -458761, 131072, 2, -393225, 131072, 3, -327689, 131072, 3, -458760, 196608, 2, -393224, 196608, 3, -327688, 131072, 3, -458759, 262144, 2, -393223, 262144, 3, -327687, 262144, 4, -458758, 327680, 2, -393222, 327680, 3, -327686, 327680, 4, -589844, 0, 0, -524308, 0, 1, -589843, 65536, 0, -524307, 65536, 1, -589842, 131072, 0, -524306, 131072, 1, -589841, 196608, 0, -524305, 196608, 1, -589840, 262144, 0, -524304, 262144, 1, -589839, 327680, 0, -524303, 327680, 1, -589835, 0, 0, -524299, 0, 1, -589834, 65536, 0, -524298, 65536, 1, -589833, 131072, 0, -524297, 131072, 1, -589832, 196608, 0, -524296, 196608, 1, -589831, 262144, 0, -524295, 262144, 1, -589830, 327680, 0, -524294, 327680, 1, 524268, 0, 5, 589804, 0, 6, 524269, 65536, 5, 589805, 65536, 6, 524270, 131072, 5, 589806, 131072, 6, 524271, 196608, 5, 589807, 196608, 6, 524272, 262144, 5, 589808, 262144, 6, 524273, 327680, 5, 589809, 327680, 6, 524277, 0, 5, 589813, 0, 6, 524278, 65536, 5, 589814, 65536, 6, 524279, 131072, 5, 589815, 131072, 6, 524280, 196608, 5, 589816, 196608, 6, 524281, 262144, 5, 589817, 262144, 6, 524282, 327680, 5, 589818, 327680, 6)

[node name="SekiroBG" parent="Map" index="1" instance=ExtResource("4_wy50d")]

[node name="ParallaxBackground" parent="Map" index="2" instance=ExtResource("3_mb4d0")]
visible = false

[node name="Objects" type="Node2D" parent="." index="2"]

[node name="WoodPole" parent="Objects" index="0" instance=ExtResource("3_pcooe")]
position = Vector2(3844, 630)
scale = Vector2(1, 1.36)

[node name="Areas" type="Node2D" parent="." index="3"]

[node name="JumpCheckpoint" parent="Areas" index="0" instance=ExtResource("5_plt0h")]

[editable path="PlayerNode"]
