[gd_scene load_steps=11 format=3 uid="uid://cton8inwrjj4w"]

[ext_resource type="PackedScene" uid="uid://bmyq5ia63qcgf" path="res://RealLevels/level_1.tscn" id="1_1dkw3"]
[ext_resource type="Script" path="res://Scripts/Level1/realLevel1.gd" id="2_j2rk5"]
[ext_resource type="PackedScene" uid="uid://bf6ieccw6q3uq" path="res://GameObjects/Objects/box.tscn" id="3_10c2g"]
[ext_resource type="PackedScene" uid="uid://c2aqq1pdkg77w" path="res://GameObjects/LevelObjects/BobRoss/house.tscn" id="3_gn4nh"]
[ext_resource type="PackedScene" uid="uid://ddnjk6syawrhy" path="res://GameObjects/Blocks/bobross_grass_plat.tscn" id="4_hqgrl"]
[ext_resource type="PackedScene" uid="uid://pjb4qvixwt3q" path="res://GameObjects/Blocks/Sekiro/PoleSingle.tscn" id="4_s6efw"]
[ext_resource type="PackedScene" uid="uid://bc8x3un1onoqf" path="res://GameObjects/Util/Checkpoint.tscn" id="5_g1f6t"]
[ext_resource type="PackedScene" uid="uid://dvk2ur0ujl6bp" path="res://GameObjects/backgrounds/BobRossBG.tscn" id="5_qsyqt"]
[ext_resource type="Texture2D" uid="uid://cifyk1p4152oc" path="res://Images/BOBROSS/cliffs1.png" id="6_0ibis"]
[ext_resource type="Texture2D" uid="uid://yxtotofan5ib" path="res://Images/BOBROSS/rocksupport1.png" id="7_vva2m"]

[node name="Level1" instance=ExtResource("1_1dkw3")]
script = ExtResource("2_j2rk5")

[node name="House" parent="Map" index="0" instance=ExtResource("3_gn4nh")]
z_index = -2
position = Vector2(-2615, 739)

[node name="BobRossGrassPlat" parent="Map" index="1" instance=ExtResource("4_hqgrl")]
layer_0/tile_data = PackedInt32Array(851961, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0)

[node name="SekiroBG" parent="Map" index="2" instance=ExtResource("5_qsyqt")]

[node name="Objects" type="Node2D" parent="." index="2"]

[node name="WoodPole" parent="Objects" index="0" instance=ExtResource("4_s6efw")]
position = Vector2(3844, 630)
scale = Vector2(1, 1.36)

[node name="Box1" parent="Objects" index="1" instance=ExtResource("3_10c2g")]
position = Vector2(-9, 904)
max_contacts_reported = 5

[node name="Box2" parent="Objects" index="2" instance=ExtResource("3_10c2g")]
position = Vector2(2143, 904)
max_contacts_reported = 5

[node name="Areas" type="Node2D" parent="." index="3"]

[node name="JumpCheckpoint" parent="Areas" index="0" instance=ExtResource("5_g1f6t")]

[node name="Cliffs1" type="Sprite2D" parent="." index="4"]
z_index = -3
position = Vector2(-1204, 1193)
texture = ExtResource("6_0ibis")

[node name="Rocksupport1" type="Sprite2D" parent="." index="5"]
z_index = -2
position = Vector2(498, 840.25)
scale = Vector2(0.532552, 0.461604)
texture = ExtResource("7_vva2m")

[node name="Rocksupport2" type="Sprite2D" parent="." index="6"]
z_index = -2
position = Vector2(814, 840.25)
scale = Vector2(0.532552, 0.461604)
texture = ExtResource("7_vva2m")
flip_h = true

[connection signal="body_entered" from="Objects/Box1" to="." method="_on_box_body_entered"]
[connection signal="body_entered" from="Objects/Box2" to="." method="_on_box_2_body_entered"]
